<resources>
    <string name="app_name">Final Project Bootcamp</string>
    <string name="Title_Logo">IMDb</string>
    <string name="Small_Title_Usuario">Usuario</string>
    <string name="Small_Title_Password">Contraseña</string>
    <string name="linkPassword">¿Olvidaste la contraseña?</string>
    <string name="Tituloredes">Ó podes ingresar con</string>
    <string name="PiePagina1">¿No tenes cuenta?</string>
    <string name="PiePagina2">Registrate</string>
    <string name="PiePagina3">Continuar como invitado</string>
    <string name="CrearCuenta_PagRegistro">Crear una cuenta</string>
    <string name="ValidarPass_PagRegistro">La contraseña debe contener 8 caracteres</string>
    <string name="AceptarRegistro">Aceptar</string>
    <string name="Sugerencia_Buscador">Buscar IMDb</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RegisterTexInpNom_Hint">Nombre</string>
    <string name="RegisterTexInpEma_Hint">Correo electronico</string>
    <string name="RegisterTexInpPass_Hint">Contraseña</string>
    <string name="RegisterBtn_Text">Aceptar</string>
    <string name="jorge_ivan_gomez_restrepo">Jorge Ivan Gomez Restrepo</string>
    <string name="Btnlogin_Login">Login</string>
    <!-- Add in movies names  -->
    <string name="movie1_name">Interstelar</string>
    <string name="movie2_name">Everest</string>
    <string name="movie3_name">Contra Cara</string>
    <!-- Add in movies description  -->
    <string name="movie1_description">Interstelar</string>
    <string name="movie2_description">Everest</string>
    <string name="movie3_description">Contra Cara</string>

    <string name="movie_image_content_description">Image of movie</string>
</resources>