<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_Regresar"
        android:layout_width="@dimen/RegisterImgView_LayoutWidth"
        android:layout_height="@dimen/RegisterImgView_LayoutHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flecha" />

    <TextView
        android:id="@+id/textview_logoRegistro"
        style="@style/BacGro_FonFam_Tex"
        android:layout_width="@dimen/TextViewLogo_LayoutWidth"
        android:layout_height="@dimen/TextViewLogo_LayoutHeight"
        android:background="@drawable/rounded_logoregistro"
        android:gravity="center"
        android:textSize="@dimen/TextViewLogo_TextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_Regresar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textview_crearCuenta"
        style="@style/Small_Title"
        android:layout_width="@dimen/RegisterTexViCreCue_LayoutWidth"
        android:layout_height="@dimen/RegisterTexViCreCue_LayoutHeight"
        android:layout_marginBottom="@dimen/RegisterTexViCreCue_MarginBott"
        android:text="@string/CrearCuenta_PagRegistro"
        android:textSize="@dimen/RegisterTexViCreCue_TexSiz"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_logoRegistro"
        app:layout_constraintVertical_bias="0.148" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlined_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/RegisterTexInpNom_LayoutWidth"
        android:layout_height="@dimen/RegisterTexInpNom_LayoutHeight"
        android:layout_margin="@dimen/RegisterTexInpNom_LayoutMargin"
        android:hint="@string/RegisterTexInpNom_Hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textview_crearCuenta"
        app:layout_constraintTop_toBottomOf="@+id/textview_crearCuenta">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/outlined_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlined_text_input_layout_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/RegisterTexInp_LayoutWidth"
        android:layout_height="@dimen/RegisterTexInp_LayoutHeight"
        android:layout_margin="@dimen/RegisterTexInp_LayoutMargin"
        android:hint="@string/RegisterTexInpEma_Hint"
        app:layout_constraintEnd_toEndOf="@+id/outlined_text_input_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/outlined_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/outlined_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/outlined_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlined_text_input_layout_passw"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/RegisterTexInpPass_LayoutWidht"
        android:layout_height="@dimen/RegisterTexInpPass_LayoutHeight"
        android:layout_margin="@dimen/RegisterTexInpPass_LayoutMargin"
        android:hint="@string/RegisterTexInpPass_Hint"
        app:layout_constraintEnd_toEndOf="@+id/outlined_text_input_layout_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/outlined_text_input_layout_email"
        app:layout_constraintTop_toBottomOf="@+id/outlined_text_input_layout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/outlined_edit_text_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_validarPassw"
        android:layout_width="@dimen/RegisterTexViePass_LayoutWidth"
        android:layout_height="@dimen/RegisterTexViePass_LayoutHeight"
        android:autoLink="web"
        android:fontFamily="@font/roboto"
        android:linksClickable="true"
        android:paddingStart="10sp"
        android:text="@string/ValidarPass_PagRegistro"
        android:textColor="@color/Small_Title_gray"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/outlined_text_input_layout_passw"
        app:layout_constraintStart_toStartOf="@+id/outlined_text_input_layout_passw"
        app:layout_constraintTop_toBottomOf="@+id/outlined_text_input_layout_passw" />

    <Button
        android:id="@+id/button3"
        style="@style/Bottom_RegisterAceptar"
        android:text="@string/RegisterBtn_Text"
        android:textAllCaps="false"
        android:backgroundTint="@color/Boton_Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_validarPassw"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/textView_validarPassw" />

</androidx.constraintlayout.widget.ConstraintLayout>